--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <div class="main">
+    <div class="container-box">
         Main Box
-        test
-        <div class="test-box one">1</div>
-        <div class="test-box two">2</div>
-        <div class="test-box three">3</div>
-        <div class="test-box four">4</div>
-
+        <div class="all-sub-boxes one">1</div>
+        after box 1
+        <div class="all-sub-boxes two">2</div>
+        <div class="all-sub-boxes three">3</div>
+        <div class="all-sub-boxes four">4</div>
+    </div>
 </body>
 <script src="js/code.js"></script>
 
