--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+    <div class="card">
+        <h1>Nisl suscipit adipiscing bibendum est ultricies integer quis auctor.</h1>
+        <p>Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
+        <p class="links">
+            <a href="#">contact me</a> <a href="#">learn more about me</a>
+        </p>
+    </div>
+
+
+
     <div class="container-box">
         Main Box
         <div class="all-sub-boxes one">1</div>
